React forms to input data Interactive Graph visualization Make UI user ready Fix the Theory Template - Fix sematic linking Bug fix: Text bleed, missing delete/modify options. Landing page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #cee1eb;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #b9d1de;
 }
 
 body {
@@ -52,6 +52,12 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.box {
+
+ clip-path: inset(0% 0 0% 0 round 30% 0% 0 0%);
+
 }
 
 @media (prefers-color-scheme: light) {
